fix image distortion and coloring of the breakdown of items page Relates #152

--- a/public/sass/itemsbysupermarket.sass
+++ b/public/sass/itemsbysupermarket.sass
@@ -15,7 +15,6 @@
 .title
     text-align: center
     font-size: 30px
-    padding-left: 20px
 
 .text
     font-size: 20px
@@ -24,14 +23,9 @@
 .product
     font-weight: bold
 
-.product-img
-    width: auto
-    max-width: 150px
-    height: auto
-    max-height: 150px
-
 .result-items
     display: flex
+    align-content: flex-start
 
 .line
     margin-top: 20px
@@ -39,3 +33,23 @@
     border: 0
     height: 1px
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))
+
+.img-container
+    background-color: white
+    border: 2px solid white
+    margin: 2px
+    width: 150px
+    max-width: 30vw
+    max-height: 30vw
+    height: 150px
+    display: flex
+    opacity: 1
+    .product-img
+        width: 90%
+        object-fit: contain
+
+.rating-icons
+    width: 300px
+h2
+    text-align: center
+    transform: translateY(-50px)
